force-app/main/default/objects/Installation_Audit__c/Installation_Audit__c.object-meta.xml
<CustomObject>
    <label>Installation Audit</label>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>Installation Audit #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installation Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>