force-app/main/default/objects/Installation_Audit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installation Audits</relationshipLabel>
    <relationshipName>Installation_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>