force-app/main/default/objects/Installation_Audit__c/fields/Call_Report__c.field-meta.xml
<CustomField>
    <fullName>Call_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Report</label>
    <referenceTo>Call_Report__c</referenceTo>
    <relationshipLabel>Installation Audits</relationshipLabel>
    <relationshipName>Installation_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>