force-app/main/default/objects/Installation_Audit__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Installation Audits</relationshipLabel>
    <relationshipName>Installation_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>