force-app/main/default/objects/Installation_Audit__c/fields/Date_of_Audit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Audit__c</fullName>
    <label>Date of Audit</label>
    <type>Date</type>
</CustomField>