force-app/main/default/objects/Installation_Audit__c/fields/Documentation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Comments__c</fullName>
    <label>Documentation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>