force-app/main/default/objects/Installation_Audit__c/fields/Mobile_Unit_PM__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Unit_PM__c</fullName>
    <label>Mobile Unit PM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>