force-app/main/default/objects/Installation_Audit__c/fields/Mobile_Unit_Software_Comments__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Unit_Software_Comments__c</fullName>
    <label>Mobile Unit Software Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>