force-app/main/default/objects/Installation_Audit__c/fields/NFF_CND_Rate__c.field-meta.xml
<CustomField>
    <fullName>NFF_CND_Rate__c</fullName>
    <label>NFF/CND Rate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>