force-app/main/default/objects/Installation_Audit__c/fields/Test_Cart_Bench__c.field-meta.xml
<CustomField>
    <fullName>Test_Cart_Bench__c</fullName>
    <label>Test Cart/Bench</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>