force-app/main/default/objects/Installation_Audit__c/fields/Test_Cart_Bench_Comments__c.field-meta.xml
<CustomField>
    <fullName>Test_Cart_Bench_Comments__c</fullName>
    <label>Test Cart/Bench Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>