force-app/main/default/objects/Installation_Audit__c/fields/Tools__c.field-meta.xml
<CustomField>
    <fullName>Tools__c</fullName>
    <label>Tools</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>