force-app/main/default/objects/Installation_Audit__c/fields/Tools_Comments__c.field-meta.xml
<CustomField>
    <fullName>Tools_Comments__c</fullName>
    <label>Tools Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>